--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="20">
-    <td> <img src="images/Linus.png" alt="Linus Nyman profile image"></td>
+    <td> <img src="/images/Linus.png" alt="Linus Nyman profile image"></td>
     <td>
       <h1>Linus Nyman</h1>
       <p><em>Application analyst/operational support <strong><a href="http://www.posten.no">Posten Norge AS</a></strong></em></p>
